Fixed double scroll issue.

--- a/src/styles/app/responsive.scss
+++ b/src/styles/app/responsive.scss
@@ -21,7 +21,6 @@ header, footer {
 
 main {
     flex-grow: 1;
-    overflow-y: scroll;
 }
 
 @media (min-width: $desktop){
